[package]
name = "arugio_shared"
version = "0.1.0"
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
bevy_ecs = {path = ".../../../../../../bevy2/crates/bevy_ecs"}
bevy_math = {path = ".../../../../../../bevy2/crates/bevy_math"}
bevycheck = "0.1.4"
#/Users/alan.poon/Documents/rust/bevy_stuffs/bevy2